syntax = "proto3";

package com.github.dfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.github.dfs.namenode.rpc.model";  
option java_outer_classname = "NameNodeRpcModel";

//向namenode注册信息
message RegisterRequest{  
    string ip  = 1;  
    string hostname  = 2;
    int32 nioPort = 3;
}  
message RegisterResponse{  
    int32 status  = 1;   
}
//心跳请求
message HeartbeatRequest{  
    string ip  = 1;  
    string hostname  = 2;
    int32 nioPort = 3;
}  
message HeartbeatResponse{  
    int32 status  = 1;   
}
//创建目录
message MkdirRequest{
    string path  = 1;
}
message MkdirResponse{
    int32 status  = 1;
}
//优雅关闭
message ShutdownRequest{
    int32 code  = 1;
}
message ShutdownResponse{
    int32 status  = 1;
}
//backupnode同步数据
message FetchEditsLogRequest{
    int64 editsLogTxId  = 1;
    int32 expectFetchSize  = 2;
}
message FetchEditsLogResponse{
    string editsLog = 1;
    int32 status = 2;
}
//通知namenode文件目录树持久化到哪个txid
message CheckPointTxIdRequest{
    int64 txId  = 1;
}
message CheckPointTxIdResponse{
    int32 code = 1;
}
//创建文件路径
message CreateFileRequest{
    string fileName  = 1;
}
message CreateFileResponse{
    int32 status = 1;
}
//分配文件大小
message AllocateDataNodesRequest{
    string fileName = 1;
    int64 fileSize  = 2;
}
message AllocateDataNodesResponse{
    string datanodes = 1;
}
