syntax = "proto3";

package com.github.dfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.github.dfs.namenode.rpc.service"; 
option java_outer_classname = "NameNodeServer";

import "NameNodeRpcModel.proto";

service NameNodeService {  
    rpc register(RegisterRequest) returns (RegisterResponse);  
	rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);  
	rpc mkdir(MkdirRequest) returns (MkdirResponse);
	rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
	rpc fetchEditsLog(FetchEditsLogRequest) returns (FetchEditsLogResponse);
	rpc updateCheckPointTxId(CheckPointTxIdRequest) returns (CheckPointTxIdResponse);
	rpc createFile(CreateFileRequest) returns (CreateFileResponse);
	rpc AllocateDataNodesFile(AllocateDataNodesRequest) returns (AllocateDataNodesResponse);
	rpc informReplicaReceived(InformReplicaReceivedRequest) returns (InformReplicaReceivedResponse);
	rpc reportCompleteStorageInfo(ReportCompleteStorageInfoRequest) returns (ReportCompleteStorageInfoResponse);
	rpc chooseDataNodeForFile(ChooseDataNodeForFileRequest) returns (ChooseDataNodeForFileResponse);
	rpc reallocateDataNode(ReallocateDataNodeRequest) returns (ReallocateDataNodeResponse);

}